fixed image stretching

--- a/style.scss
+++ b/style.scss
@@ -216,10 +216,12 @@ $orange-letter: #ff4422;
 @media screen and (max-width: 760px) {
     .intro {
         display: flex;
+        grid-gap: 0;
+        justify-content: center;
         flex-direction: column;
         figure {
             width: 100%;
-            height: 25vh;
+            margin-bottom: 0.3em;
             span {
                 display: none;
             }
@@ -293,16 +295,13 @@ $orange-letter: #ff4422;
     .latest-news {
         flex-direction: column;
         padding-bottom: 0;
-        h2 {
-            margin: 1em 0;
-        }
         figure {
             width: 100%;
-            margin-bottom: 2em;
+            margin: 0.5em;
             flex-direction: row;
             img {
                 width: 19%;
-                height: 88%;
+                height: 65%;
                 margin-right: 1em;
             }
         }
@@ -484,13 +483,13 @@ $orange-letter: #ff4422;
             width: 100%;
             margin-bottom: 0.7em;
             h4 {
-                padding-left: 17%;
+                padding-left: 18%;
             }
             div p {
-                padding-left: 17%;
+                padding-left: 18%;
             }
             img {
-                width: 13%;
+                width: 14%;
                 top: 5%;
                 left: 2%;
             }
@@ -530,7 +529,7 @@ $orange-letter: #ff4422;
                 h2 {
                     color: white;
                     margin: 0.2em 0;
-                    font-size: 1.3rem;
+                    font-size: 1.4rem;
                 }
                 .first-para {
                     font-size: 0.8rem;
@@ -538,7 +537,7 @@ $orange-letter: #ff4422;
                 }
                 p:last-child {
                     color: $gray-letter;
-                    font-size: 0.6rem;
+                    font-size: 0.7rem;
                 }
             }
             &::after {
@@ -561,6 +560,7 @@ $orange-letter: #ff4422;
             div {
                 order: 1;
                 min-width: 30%;
+                max-width: 35%;
                 height: 97px;
                 overflow: hidden;
                 display: flex;
@@ -581,7 +581,7 @@ $orange-letter: #ff4422;
                 }
                 p:last-child {
                     font-weight: bold;
-                    font-size: 0.8em;
+                    font-size: 1em;
                 }
             }
         }
@@ -632,6 +632,9 @@ $orange-letter: #ff4422;
             h2 {
                 margin-top: 0;
             }
+            ul {
+                margin-top: 0.5em;
+            }
         }
     }
 }
@@ -651,6 +654,7 @@ $orange-letter: #ff4422;
         color: $orange-letter;
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
     article {
         width: 23%;
@@ -698,6 +702,7 @@ $orange-letter: #ff4422;
 @media screen and (max-width: 760px) {
     .latest-deals {
         flex-direction: column;
+        padding-bottom: 3em;
         .header {
             padding: 0;
         }
@@ -706,7 +711,7 @@ $orange-letter: #ff4422;
             figure {
                 flex-direction: row;
                 img {
-                    max-width: 14%;
+                    max-width: 25%;
                     margin-right: 1em;
                 }
                 figcaption p {
